--- a/reminderAppStarterFile/reminderAppStarterFile/package.json
+++ b/reminderAppStarterFile/reminderAppStarterFile/package.json
@@ -18,9 +18,11 @@
     "body-parser": "^1.15.2",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
-    "express-ejs-layouts": "^2.2.0",
+    "express-ejs-layouts": "^2.5.1",
     "method-override": "^2.3.7",
     "mongoose": "^4.7.7",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0"
   }
 }
