--- a/reminderAppStarterFile/reminderAppStarterFile/package.json
+++ b/reminderAppStarterFile/reminderAppStarterFile/package.json
@@ -16,6 +16,7 @@
   "homepage": "http",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "dotenv": "^10.0.0",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "express-ejs-layouts": "^2.5.1",
@@ -25,6 +26,7 @@
     "nodemon": "^1.11.0",
     "passport": "^0.5.0",
     "passport-github": "^1.1.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sessionstore": "^1.3.7"
   }
 }
