--- a/reminderAppStarterFile/reminderAppStarterFile/package.json
+++ b/reminderAppStarterFile/reminderAppStarterFile/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.2",
     "method-override": "^2.3.7",
     "mongoose": "^4.7.7",
+    "node-fetch": "^3.1.0",
     "nodemon": "^1.11.0",
     "passport": "^0.5.0",
     "passport-github": "^1.1.0",
