--- a/reminderAppStarterFile/reminderAppStarterFile/package.json
+++ b/reminderAppStarterFile/reminderAppStarterFile/package.json
@@ -28,6 +28,8 @@
     "passport": "^0.5.0",
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
-    "sessionstore": "^1.3.7"
+    "sessionstore": "^1.3.7",
+    "unsplash-api": "^1.2.0",
+    "unsplash-js": "^7.0.15"
   }
 }
